<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GpsAplication</string>
    <string name="action_settings">Settings</string>
    <string name="record_btn_start">Start Recording</string>
    <string name="record_btn_stop">Stop Recording</string>
    <string name="playback_btn_start">Start Playback</string>
    <string name="playback_btn_stop">Stop Playback</string>
    <string name="status">Status: </string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude: </string>
    <string name="heading">Heading: </string>
    <string name="speed">Speed: </string>
    <string name="recording">Recording</string>
    <string name="playback">Playback</string>
    <string name="degrees">degrees</string>
    <string name="speed_units_m_s">m/s:</string>
    <string name="error_message">No GPS data is available. Please check your phone.</string>

</resources>
