<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/AppBaseTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/padding_wrapper_and_button"
    android:baselineAligned="true"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/wrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/record_btn"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_wrapper_and_button"
            android:text="@string/record_btn_start" />

        <Button
            android:id="@+id/playback_btn"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_wrapper_and_button"
            android:text="@string/playback_btn_start" />

        <LinearLayout
            style="@style/dataContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_wrapper_and_button"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/status"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_data_container"
                android:text="@string/status"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/longitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_data_container"
                android:text="@string/longitude"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/latitude"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_data_container"
                android:text="@string/latitude"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/heading"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_data_container"
                android:text="@string/heading"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/speed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        
    <!--        -->
        <fragment
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/map_height" /> 
    </LinearLayout>


</ScrollView>